jvimalprasathdev/src/objects/LeadScoringRule__c.object
<CustomObject>
    <description>This object tracks the lead scoring rules to help prioritize leads based on who they are and what they do.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>In-Active rules are NOT evaluated when a lead or campaign member is saved.</description>
        <inlineHelpText>In-Active rules are NOT evaluated when a lead or campaign member is saved.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Selecting a campaign limits the rule to fire only for members of this campaign.  Leaving this blank selects all campaigns.</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Lead Scoring Rules</relationshipLabel>
        <relationshipName>Lead_Scoring_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_Label__c</fullName>
        <description>This contains the more readable field label of the Field name.  Note this approach doesn&apos;t solve for an org has two fields with the same label.  There&apos;s a chance the wrong field would be used.</description>
        <label>Field Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <description>Field name used for criteria</description>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <picklist>
            <picklistValues>
                <fullName>equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>not equal to</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater or equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less or equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>contains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>does not contain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>starts with</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Score_Change__c</fullName>
        <label>Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Rule Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Member</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lead Scoring Rule</label>
    <nameField>
        <label>LeadScoringRule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Scoring Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Max_length_80_Char</fullName>
        <active>true</active>
        <description>Nice error message for Max Length of &apos;Value&apos; which is 80 characters</description>
        <errorConditionFormula>LEN(Value__c ) &gt;255</errorConditionFormula>
        <errorMessage>You can only use 80 characters for &apos;Value&apos;.  Please shorten your criteria before saving again.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Commas</fullName>
        <active>true</active>
        <description>Disallows comma&apos;s in Value as my code doesn&apos;t support them</description>
        <errorConditionFormula>OR(contains( Value__c, &apos;,&apos;) , contains( Value__c, &apos;;&apos;))</errorConditionFormula>
        <errorMessage>Unfortunately, you cannot use a comma or semicolon for either multiple values or numbers. Please remove any commas and semicolons, and if desired, create a second rule for additional criteria.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_LeadScore_CampaignScore_TotalScore</fullName>
        <active>true</active>
        <errorConditionFormula>Field_Name__c ==&apos;lead_score__c&apos;|| Field_Name__c ==&apos;campaign_score__c&apos;|| Field_Name__c ==&apos;total_score__c&apos;</errorConditionFormula>
        <errorMessage>You cannot create a rule with Field Name referencing Lead Score, Campaign Score, or Total Score.  Please change the field name for this rule.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Type</fullName>
        <active>true</active>
        <description>Errors if Type is not selected or == --None--</description>
        <errorConditionFormula>ISPICKVAL(Type__c,&apos;&apos;)||ISPICKVAL(Type__c,&apos;--None--&apos;)</errorConditionFormula>
        <errorMessage>You must select a Type such as Lead or Campaign Member</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NullPoints</fullName>
        <active>true</active>
        <description>Errors if Score is set to null</description>
        <errorConditionFormula>isnull( Score_Change__c ) || isBlank(Score_Change__c)</errorConditionFormula>
        <errorMessage>You must enter a value for Points.  

Note you can enter negative values to decrease the lead score if criteria is met.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rule_field_operator_are_valid</fullName>
        <active>true</active>
        <description>Checks that the rule has a valid field  operator</description>
        <errorConditionFormula>ISNULL(Field_Name__c)  ||Field_Name__c==&apos;&apos; || ISNULL(text(Operator__c )) || ISNULL(text(Type__c)) || ISNULL(Value__c)  || Value__c==&apos;&apos;</errorConditionFormula>
        <errorMessage>You must select a field, operator, and value before saving.  Blank or null values are not supported as valid values.</errorMessage>
    </validationRules>
</CustomObject>